--- a/config/server.conf
+++ b/config/server.conf
@@ -23,3 +23,8 @@ tls-server
 tls-version-min 1.2
 tls-auth /etc/openvpn/ta.key 0
 crl-verify /etc/openvpn/crl.pem
+
+script-security 2
+explicit-exit-notify
+client-connect "/etc/openvpn/scripts/client-connect.sh"
+client-disconnect "/etc/openvpn/scripts/client-disconnect.sh"
