--- a/config/server.conf
+++ b/config/server.conf
@@ -6,10 +6,10 @@ cert /etc/openvpn/MyReq.crt
 key /etc/openvpn/MyReq.key
 dh /etc/openvpn/dh.pem
 server 10.8.0.0 255.255.255.0
+client-to-client
+
 ifconfig-pool-persist ipp.txt
-;push "redirect-gateway def1 bypass-dhcp"
-;push "dhcp-option DNS 208.67.222.222"
-;push "dhcp-option DNS 208.67.220.220"
+
 duplicate-cn
 keepalive 10 120
 cipher AES-256-GCM
@@ -25,6 +25,7 @@ tls-auth /etc/openvpn/ta.key 0
 crl-verify /etc/openvpn/crl.pem
 
 script-security 2
-explicit-exit-notify
 client-connect "/etc/openvpn/scripts/client-connect.sh"
 client-disconnect "/etc/openvpn/scripts/client-disconnect.sh"
+
+explicit-exit-notify
