--- a/config/server.conf
+++ b/config/server.conf
@@ -1,5 +1,5 @@
 port 1194
-proto udp
+proto tcp
 dev tun
 ca /etc/openvpn/ca.crt
 cert /etc/openvpn/MyReq.crt
@@ -18,7 +18,8 @@ auth SHA512
 persist-key
 persist-tun
 status openvpn-status.log
-verb 1
+verb 3
+
 tls-server
 tls-version-min 1.2
 tls-auth /etc/openvpn/ta.key 0
@@ -27,5 +28,3 @@ crl-verify /etc/openvpn/crl.pem
 script-security 2
 client-connect "/etc/openvpn/scripts/client-connect.sh"
 client-disconnect "/etc/openvpn/scripts/client-disconnect.sh"
-
-explicit-exit-notify
